log/build_2024-03-01_15-23-12/ar_slam_base/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/GTL/wxu/cs7630_g6/install/ar_slam_base/lib/python3.10/site-packages/ar_slam_base/mapping_kf.py", line 57
    logger.info("Shape of X: " + str(self.X.shape)
               ^
SyntaxError: '(' was never closed

